fixed missing colors for shared styles

--- a/src/assets/style/shared/bg-color.scss
+++ b/src/assets/style/shared/bg-color.scss
@@ -85,3 +85,11 @@
 .bg-green-950 {
   background-color: var(--color-green-950);
 }
+
+.bg-white {
+  background-color: var(--color-white);
+}
+
+.bg-black {
+  background-color: var(--color-black);
+}
