--- a/src/assets/style/shared/text-color.scss
+++ b/src/assets/style/shared/text-color.scss
@@ -85,3 +85,11 @@
 .text-green-950 {
   color: var(--color-green-950);
 }
+
+.text-white {
+  color: var(--color-white);
+}
+
+.text-black {
+  color: var(--color-black);
+}
